docs: documentation for delete opportunity
